tests/ui/printdoc-no-arg.stderr
error: 1 positional argument in format string, but no arguments were given
 --> $DIR/tests/ui/printdoc-no-arg.rs:4:16
  |
4 |     printdoc!("{}");
  |                ^^
